# simda

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: coverage.yml
docs/: index.md
docs/stylesheets/: extras.css
simda/: main.py
