[project]
name = "simda"
version = "0.1.0"
description = "Simda is a simple data downloader for brazilian financial data. "
authors = ["0b10n3 <silvasmath@gmail.com>"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.0",
    "ruff>=0.11.13",
    "taskipy>=1.14.1",
]
