[project]
name = "simda"
version = "0.1.0"
description = "Simda is a simple data downloader for brazilian financial data. "
authors = ["0b10n3 <silvasmath@gmail.com>"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.0",
    "ruff>=0.11.13",
    "taskipy>=1.14.1",
]



[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
pre_test = 'task lint'
test = 'pytest -s -x --cov=simda -v'
post_test = 'coverage html'

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ['E402', 'F811']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'
